# terrier

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  pypi.yml  test.yml
terrier/: __init__.py  cli.py  db.py  graph.py  hook.py  ingest.py  search.py
tests/: test_terrier.py
