[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "terrier-kb"
version = "0.1.1"
description = "Local-first memory for your coding agents: one SQLite file, zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Makeph" }]
keywords = ["claude-code", "knowledge-base", "fts5", "agents", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
terrier = "terrier.cli:main"

[project.urls]
Homepage = "https://github.com/Makeph/terrier"
Repository = "https://github.com/Makeph/terrier"
Issues = "https://github.com/Makeph/terrier/issues"

[tool.setuptools]
packages = ["terrier"]
